Improve navbar and scrollbar formatting, add bottom navbar for small screens, and other formatting fixes

--- a/src/global.styl
+++ b/src/global.styl
@@ -10,14 +10,21 @@
 :root
 html
 body
-	overflow overlay // Scrollbar is above content instead of beside
-	overflow-x hidden
+main
 	background var(--background)
 
 	--mainaccent #7531ff
 
 	font-family "SF UI Display Regular", -apple-system, BlinkMacSystemFont,
 		"Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif
+
+main
+	overflow hidden
+
+body
+	display flex
+	flex-direction column
+	min-height 100vh
 
 .light-text
 	color var(--light-text) !important
@@ -65,18 +72,23 @@ img[src^="/api/avatar"]
 	background var(--mainaccent)
 
 ::-webkit-scrollbar
-	position fixed
-	width 0.5rem
-	height 0.5rem
+	width 0.8rem
+	height 0.8rem
 
 	&-track
 	&-corner
-		background none
-	&-thumb
-		border-radius 0.2rem
 		background var(--accent)
+
+	&-thumb
+		border-radius 1rem
+		background var(--background)
+		border 0.15rem solid var(--accent)
+		width 0.5rem
+		
 		&:hover
 			background var(--accent3)
+		&:active
+			background var(--accent2)
 
 // bootstrap variables
 :root
